Fix missing integration.* package prefixes and data dictionary entries
Address Devin Review findings:
- Add integration.* package prefixes (AR, CAM, CG, EC, LD, PURAP, BC)
  Required for externalizable business object resolution
- Fix CamConfig: use integration.cam instead of module.cab in packagePrefixes
- Add UnitDTO.xml data dictionary entry to CgConfig
- Add batch/businessobject/datadictionary/*.xml to TemConfig